# POSGUIN

./: .gitignore  README.md  pyproject.toml
backend/: database.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1c50c7a51c89_add_proveedor_rename_impuesto_compra.py
backend/app/: main.py
backend/app/core/: config.py
backend/app/models/: product.py  user.py
backend/app/routers/: product.py  user.py
backend/app/schemas/: product.py  user.py
docker/: docker-compose.yml
docker/postgres_data/: postmaster.pid
docker/postgres_data/base/1/: 1259  2619  2619_vm  2696
docker/postgres_data/base/16384/: 1247  1249  1259  16389  16390  16396  16398  16399  16400  2224  2579  2604  2606  2608  2610  2619  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2703  2704  3455  5002  pg_internal.init
docker/postgres_data/base/4/: 2619
docker/postgres_data/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
frontend/: package-lock.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Button.tsx  Clock.tsx  ContentArea.tsx  FooterBar.tsx  Input.tsx  Sidebar.tsx  Table.tsx  Topbar.tsx  modules.ts
frontend/src/components/CSS/: Button.css  (+6 more)
frontend/src/hooks/: useProductos.ts
frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx
frontend/src/services/: products.ts
src/: main.py
src/constants/: routes.py
src/custom_controls/: counter.py
src/db/: database.db  db_manager.py
src/pages/: almacen.py  home.py  inventario.py  loginInventario.py
src/popups/: agregarProducto.py
(+20 files in other folders)
